[metadata]
name = src
description = Dagster code server issue reproduction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brunobento-delfos/dagster-code-server-sleep
author = Bruno Bento Barros de Araújo
author_email = bruno.bento@delfosim.com
license = MIT
license_files =
platforms = any
classifiers =
    Programming Language :: Python :: 3.11
project_urls =
    Source Code = https://github.com/brunobento-delfos/dagster-code-server-sleep


[options]
packages = find:
install_requires =
    dagster==1.6.*
    dagster-webserver==1.6.*
    dagster_postgres==0.22.*
    dagster-k8s==0.22.*
    dagster-celery[amqp,redis]==0.22.*
    pendulum<3

[options.extras_require]
dev =
    flower>=2.0.1
